[build-system]
requires = ["sphinx-theme-builder>=0.2.0b2"]
build-backend = "sphinx_theme_builder"

[project]
name = "qiskit-sphinx-theme"
description = "A Sphinx theme for Qiskit and Qiskit Ecosystem projects"
dynamic = ["version"]

license = { file = "LICENSE" }
authors = [{ name = "Qiskit Development Team", email = "hello@qiskit.org" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Documentation",
    "Framework :: Sphinx :: Theme",
]

dependencies = [
    "docutils",
    # Keep in sync with Furo's constraint.
    "sphinx>=6.0",
    # Remove jQuery once we get rid of the Pytorch theme.
    "sphinxcontrib-jquery",
    # See CONTRIBUTING.md for how to upgrade Furo.
    "furo==2023.5.20",
]

[project.entry-points."sphinx.html_themes"]
qiskit = "qiskit_sphinx_theme"
qiskit_sphinx_theme = "qiskit_sphinx_theme"

[project.urls]
"Bug Tracker" = "https://github.com/Qiskit/qiskit_sphinx_theme/issues"
"Source Code" = "https://github.com/Qiskit/qiskit_sphinx_theme"

[tool.sphinx-theme-builder]
node-version = "18.16.1"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["example_docs", "docs_guide", "tests"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "furo",
    "jupyter_sphinx.thebelab"
]
ignore_missing_imports = true
